// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template renders default 1`] = `
"<table class=\\"table\\">
  <!--v-if-->
  <tbody></tbody>
</table>"
`;

exports[`template renders with fields and items 1`] = `
"<table class=\\"table\\">
  <thead>
    <tr>
      <th class=\\"table-heading-sortable table-heading-sortable-asc\\">ajdie</th>
      <th class=\\"table-heading-sortable\\">neem</th>
      <th class=\\"\\">type</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>1</td>
      <td>Word</td>
      <td></td>
    </tr>
    <tr>
      <td>2</td>
      <td>Press</td>
      <td></td>
    </tr>
    <tr>
      <td>3</td>
      <td>ISDABEST</td>
      <td></td>
    </tr>
    <tr>
      <td>4</td>
      <td>#prank</td>
      <td></td>
    </tr>
  </tbody>
</table>"
`;

exports[`template renders with items 1`] = `
"<table class=\\"table\\">
  <thead>
    <tr>
      <th class=\\"\\">id</th>
      <th class=\\"\\">name</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>1</td>
      <td>Word</td>
    </tr>
    <tr>
      <td>2</td>
      <td>Press</td>
    </tr>
    <tr>
      <td>3</td>
      <td>ISDABEST</td>
    </tr>
    <tr>
      <td>4</td>
      <td>#prank</td>
    </tr>
  </tbody>
</table>"
`;
